--- a/client/index.html
+++ b/client/index.html
@@ -47,7 +47,7 @@
       <div layout layout-align="center center" ng-controller="AuthLogoutController">
         <md-menu ng-show="currentUser" md-offset="80 30"class="md-padding">
           <a href="#"layout layout-align="center center" class="menu-icon"  ng-click="$mdOpenMenu($event)">
-            {{currentUser.username}}<span>&nbsp;<i class="material-icons">arrow_drop_down</i></span>
+            <span><i class="material-icons" style="margin-right:.2rem;font-size: 32px;">account_circle</i></span>{{currentUser.username}}<span>&nbsp;<i class="material-icons">arrow_drop_down</i></span>
           </a>
           <md-menu-content  hide-xs ng-show="currentUser" width="4">
             <md-menu-item>
@@ -85,10 +85,10 @@
           </button>
         </md-toolbar>
         <div>
-          <md-button ui-sref="dashboard">Dashboard
+          <md-button ui-sref="dashboard" ng-click='close()'>Dashboard
           </md-button>
           <md-divider></md-divider>
-          <md-button ui-sref="report-issue">Issue Tracker</md-button>
+          <md-button ui-sref="report-issue" ng-click='close()'>Issue Tracker</md-button>
           <md-divider></md-divider>
           <md-button ng-controller="AuthLogoutController" ng-show="currentUser" ng-click="logout()" layout="row" class="md-subhead">
             Logout
@@ -103,7 +103,9 @@
 
 
     </md-content>
-
+  <footer flex layout layout-align="center" id="">
+    <span flex layout layout-align="center center" class="md-caption">Heath Consultants &copy;2016</span>
+  </footer>
 </div>
 
 
