--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -2,7 +2,7 @@
 
   <div layout-sm="column" layout-gt-sm="row" layout-align-gt-sm="space-around" layout-xs="column"
        layout-align-xs="start start" class="md-padding" id="top-container">
-    <div flex layout layout-xs layout-align-xs="center center">
+    <div flex layout layout-xs layout-align-xs="center center" style="min-height:200px;">
       <div ng-if="currentUser.accessLevel !='regional'" flex="100" layout="column" layout-align="start">
         <div layout layout-align="end center" style="margin-top:2.5rem;">
 
@@ -124,7 +124,7 @@
           </table>
         </div>
       </div>
-      <div ng-hide="currentUser.accessLevel=='regional'" ng-controller="DashboardController" layout="column" layout-align-sm="center center"
+      <div hide-xs ng-hide="currentUser.accessLevel=='regional'" ng-controller="DashboardController" layout="column" layout-align-sm="center center"
            id="confirmation-box"  >
         <div flex-66 layout >
           <div ng-if="statusCurrent" layout layout-align="center center" class="confirmation-icon"><i class="material-icons">done</i></div>
@@ -145,7 +145,7 @@
           <span class="md-body-1">Your confirmation has been saved!</span>
         </div>
       </div>
-      <div ng-hide="currentUser.accessLevel=='regional'" hide-xs hide-sm ng-controller="IssueReportController" layout="column" id="issue-tracker-form">
+      <div hide-xs ng-hide="currentUser.accessLevel=='regional'" hide-xs hide-sm ng-controller="IssueReportController" layout="column" id="issue-tracker-form">
         <div flex>
           <div flex flex-xs="100" layout>
             <div>
