--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -53,7 +53,7 @@
               </md-select>
             </div>
             <div layout="column" style="">
-              <div flex-xs="100" flex-gt-sm="70" flex-gt-lg="75" flex-gt-md="70" layout layout-align="space-between" class="md-title state-stats" style="">
+              <div flex-xs="100" flex-gt-sm="70" flex-gt-lg="75" flex-gt-md="70" layout layout-align="space-between" layout-xs="column" class="md-title state-stats" style="">
                 <span ng-if="selectedState"> {{ selectedState }}  {{ statePercentage | number:0 }} % </span>
                 <div flex-xs="100" flex-gt-sm="70" flex-gt-lg="75" flex-gt-md="70" ng-if="selectedState" layout="column" layout-align="center center">
                   <a href="#" layout layout-align="center center" style="text-decoration:none;"
