--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -2,7 +2,7 @@
 
   <div layout-sm="column" layout-gt-sm="row" layout-align-gt-sm="space-around" layout-xs="column"
        layout-align-xs="start start" class="md-padding" id="top-container">
-    <div flex layout layout-xs layout-align-xs="center center" style="min-height:8rem;">
+    <div flex layout layout-xs layout-align-xs="center center" >
       <div ng-if="currentUser.accessLevel !='regional'" flex="100" layout="column" layout-align="start" style="min-height:8rem;">
         <div layout="column" layout-align="start"
              style="margin-top:1rem;">
