--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -2,7 +2,7 @@
 
   <div layout-sm="column" layout-gt-sm="row" layout-align-gt-sm="space-around" layout-xs="column"
        layout-align-xs="start start" class="md-padding" id="top-container">
-    <div flex layout layout-xs layout-align-xs="center center" >
+    <div flex layout >
       <div ng-if="currentUser.accessLevel !='regional'" flex="100" layout="column" layout-align="start" style="min-height:18rem;">
         <div layout="column" layout-align="start"
              style="margin-top:1rem;">
@@ -39,9 +39,9 @@
         </table>
       </div><!--account or group-->
       <div ng-if="currentUser.accessLevel =='regional'" flex-gt-sm="40" flex-gt-lg="25"
-           flex-gt-md="30" layout layout-xs layout-align-xs="center center" style="min-height:8rem;">
-        <div style="margin:2.5rem 0;" layout-xs layout-align-xs="center center">
-          <div flex  layout="column" flex-xs-100 layout-xs="column" layout-align-xs="center center" >
+           flex-gt-md="30" layout  style="min-height:8rem;">
+        <div style="margin:2.5rem 0;" >
+          <div flex  layout="column"  layout-align-xs="center center" >
             <div ng-if="currentUser.regionId == 1" id="state-selector"  layout layout-align="center center"
                  style="">
               <span class="md-subhead">Select state:</span>
