--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -57,11 +57,11 @@
                   <a href="#" layout layout-align="center center" class="group-title" style="text-decoration:none;"
                      ng-click="sendRegionalReminder()">
                     <span class="md-subhead group-title"><span hide-xs>Group</span> Reminder</span><i class="material-icons"
-                                                                                                      style="">chat_bubble_outline</i></a>
+                                                                                        style="">chat_bubble_outline</i></a>
 
                 </div>
               </div>
-              <div flex-xs="100" flex-gt-sm="70" flex-gt-lg="75" flex-gt-md="70" ng-show="statePercentage >= 0"  layout class="status-bar" id="state-percentage"></div>
+              <div ng-show="statePercentage >= 0"  layout class="status-bar" id="state-percentage"></div>
               <div ng-if="statePercentage <= 0" class="md-headline group-title" style="color:lightgray">No updates have been
                 installed.
               </div>
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-   <div flex-xs="30" flex-gt-xs="100"  flex-gt-sm="30" flex-gt-lg="25" flex-gt-md="30"   layout="column" layout-align="start center" id="container-two">
+   <div layout="column" layout-align="start center" id="container-two">
       <div ng-show="currentUser.accessLevel=='regional' && selectedState" flex layout="column" style="width:100%; ">
         <div layout style="background-color:rgb(0, 120, 215); color:white;">
           <div flex layout="column" >
